--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -7,8 +7,10 @@ ul {
     list-style: none;
 }
 
-.news-list li + li {
-  margin-top: 20px;
+.news-list {
+  li + li {
+    margin-top: 20px;
+  }
 }
 
 nav {
@@ -17,4 +19,10 @@ nav {
 
 .pagination {
   justify-content: center;
+}
+
+.button-back {
+  margin-left: 40px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
